Bug 164706 - flash 10 beta crashes on mouse click
Summary: flash 10 beta crashes on mouse click
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: nsplugins (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-22 23:53 UTC by Ambroz Bizjak
Modified: 2008-06-29 17:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace from crash handler (1.38 KB, text/plain)
2008-06-23 00:29 UTC, Ambroz Bizjak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ambroz Bizjak 2008-06-22 23:53:04 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc (GCC) 4.1.2 (Gentoo 4.1.2 p1.1) 
OS:                Linux

When using the Adobe Flash Player 10 beta with Konqueror, some movies crash on a mouse click inside them. An example is the "Videos being watched right now" on http://youtube.com/. It does not crash in Firefox. Flash 9 works fine.

using KDE from current svn, compiled with kdesvn-build
Comment 1 Maksim Orlovich 2008-06-23 00:05:50 UTC
Please provide a backtrace..
Comment 2 Ambroz Bizjak 2008-06-23 00:29:24 UTC
Created attachment 25527 [details]
backtrace from crash handler
Comment 3 Maksim Orlovich 2008-06-23 00:37:27 UTC
I see, thanks. Probably workaroundable, though from that backtrace, it looks like a flash bug --- ignoring the ABI version. 
Comment 4 Maksim Orlovich 2008-06-26 18:24:24 UTC
SVN commit 824777 by orlovich:

Workaround a certain popular plugin's version 10 beta's inability 
to figure out that 13 < 16.

(AKA, stub out some ABI r16 methods that get called despite us claiming only ABI r13 support. 
I could perhaps do more than stuff, but I can't find any docs!)

CCBUG:164706


 M  +3 -3      sdk/npupp.h  
 M  +15 -0     viewer/nsplugin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=824777
Comment 5 Maksim Orlovich 2008-06-29 17:42:32 UTC
SVN commit 825888 by orlovich:

Here too:
Workaround a certain popular plugin's version 10 beta's inability 
to figure out that 13 < 16. 
   
(AKA, stub out some ABI r16 methods that get called despite us claiming only ABI r13 support. 
 I could perhaps do more than stubs, but I can't find any docs!) 

BUG:164706


 M  +3 -3      sdk/npupp.h  
 M  +15 -0     viewer/nsplugin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=825888