Here too: Workaround a certain popular plugin's version 10 beta's inability to figure out that 13 < 16.

(AKA, stub out some ABI r16 methods that get called despite us claiming only ABI r13 support. 
 I could perhaps do more than stubs, but I can't find any docs!) 

BUG:164706

svn path=/trunk/KDE/kdebase/apps/; revision=825888