nsplugins/sdk/npupp.h
@@ -38,7 +38,7 @@
 
 
 /*
- *  npupp.h $Revision$
+ *  npupp.h, original dollar-revision: 3.20
  *  function call mecahnics needed by platform specific glue code.
  */
 
@@ -1605,7 +1605,7 @@ enum {
 
 #else
 
-typedef bool (* NP_LOADDS NPN_PushPopupsEnabledStateUPP)(NPP npp, NPBool enabled);
+typedef void (* NP_LOADDS NPN_PushPopupsEnabledStateUPP)(NPP npp, NPBool enabled);
 #define NewNPN_PushPopupsEnabledStateProc(FUNC)		\
 		((NPN_PushPopupsEnabledStateUPP) (FUNC))
 #define CallNPN_PushPopupsEnabledStateProc(FUNC, ARG1, ARG2)		\
@@ -1631,7 +1631,7 @@ enum {
 
 #else
 
-typedef bool (* NP_LOADDS NPN_PopPopupsEnabledStateUPP)(NPP npp);
+typedef void (* NP_LOADDS NPN_PopPopupsEnabledStateUPP)(NPP npp);
 #define NewNPN_PopPopupsEnabledStateProc(FUNC)		\
 		((NPN_PopPopupsEnabledStateUPP) (FUNC))
 #define CallNPN_PopPopupsEnabledStateProc(FUNC, ARG1)		\
